# ocpe-python-overview

./: README.md  README.qmd  pyproject.toml
docs/: about.html  index.html  notes-2023-05-09.html  search.json
src/: _quarto.yml  about.qmd  index.qmd  notes-2023-05-09.qmd
